<resources>
    <string name="app_name">JetpackStart</string>
    <string name="question_mark">\?</string>
    <string name="welcome_title">Включи свои мозги</string>
    <string name="button_understand">Понятно</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Выберите уровень:</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="test_level">Тестовый</string>
    <string name="game_over">Game Over</string>
    <string name="your_score_right_answers">Ваш счет: %s</string>
    <string name="your_score_percentage">Процент правильных ответов: %s</string>
    <string name="count_right_answer_from_all_questions">Кол-во правильный ответов: %s из %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="rules_game">Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно быть число 3, потому что 3 + 4 = 7</string>
    <string name="tv_welcome">О-о-о-о-о, дорогой друг рад видеть тебя. Хочешь активизировать свой мозг на все 100%, тогда скорее ознакомься с правилами игры и стартуем!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>