<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="gameResult"
            type="com.example.useyourbrain.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="40dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/game_over"
            app:resultEmoji="@{gameResult.winner}"
            app:layout_constraintBottom_toTopOf="@id/tv_required_count_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/tv_required_count_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_your_score_right_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredCountAnswers="@{gameResult.gameSettings.minCountOfRightAnswersForWinner}"
            tools:text="@string/required_score" />

        <TextView
            android:id="@+id/tv_your_score_right_answers"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_count_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_count_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_count_answers"
            app:yourScoreRightAnswers="@{gameResult.countOfRightAnswers}"
            tools:text="@string/your_score_right_answers" />

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_your_score_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_count_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_count_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_your_score_right_answers"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswersForWinner}"
            tools:text="@string/required_percentage" />

        <TextView
            android:id="@+id/tv_your_score_percentage"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:yourScorePercentage="@{gameResult}"
            app:layout_constraintBottom_toTopOf="@id/tv_your_count_right_answer"
            app:layout_constraintEnd_toEndOf="@id/tv_required_count_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_count_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
            tools:text="@string/your_score_percentage" />

        <TextView
            android:id="@+id/tv_your_count_right_answer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:count_r_answer_from_all_questions="@{gameResult}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_required_count_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_count_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_your_score_percentage"
            tools:text="@string/count_right_answer_from_all_questions"
            />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>